      Control-left/right: forward/backward in video
      Control-home: go to beginning of the video
      Control-PageDown/Up: goto the next/previous mark
  * TranscriptionView:
    * Sort annotations before displaying them
  * Textual annotation/view editing: 
      handle open/save to a file, with corresponding 
      keyboard shortcuts (control-o, control-s), and reload (control-r)
  
 --

advene (0.17) unstable; urgency=low

  * Main GUI :
    * Video output is now embedded
    * Added a --no-embedded option
    * Added some views (navigation history, urlstack, popups) 
      around the video window
    * Popups now use the AccumulatorPopup
    * Screenshots are now displayed in popups
    * File history is available (next to the open button)
    * Added -c<configfile> command line option
    * remove all elements from a given annotationtype or relationtype from
      the contextual menu
    * The webbrowser icon now displays a UTBV menu
    * The Edit/Find functionality is implemented (using InteractiveQuery)
    * Results from the Advene browser can be displayed in a line
  
  * New action: OpenURL

  * Added default_utbv and default_stbv metadata to package
  
  * New config variables: 
     * config.data.webserver['displaymode'] : default display 
       mode (default or raw)
     * config.data.path['moviepath'] : movie files search path
  
  * Webserver:
     * Default display mode is now 'raw'
     * query parameters are available through the 'request' root element
     * /media/play now accepts a ?stbv=... parameter
     * implemented /application/adhoc to open GUI views and 
       /application/stbv to activate STBVs
  
  * Timeline : 
     * implemented annotation alignment (by drag'n drop)
     * annotations can be transmuted (by DND on an annotation type)
     * all annotation types (event empty ones) are displayed
     * new zoom possibility by clicking on timestamps labels
     * relations can be displayed by moving the cursor 